--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
-    "bwip-js": "^3.4.5",
+    "bwip-js": "^4.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -49,7 +49,8 @@
     "dependencies": "^0.0.1",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
-    "jspdf": "^2.5.1",
+    "jsbarcode": "^3.11.6",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "quagga": "^0.12.1",
