--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dependencies": "^0.0.1",
     "embla-carousel-react": "^8.3.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.15.0",
     "gh": "^2.8.9",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
